<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_50"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageHome"
                style="@style/bottom_imageview_style"
                android:background="@mipmap/home" />

            <TextView
                android:id="@+id/textHome"
                style="@style/bottom_text_style"
                android:layout_below="@id/imageHome"
                android:text="@string/home" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:clickable="true">

            <ImageView
                android:id="@+id/imageTV"
                style="@style/bottom_imageview_style"
                android:background="@mipmap/tv" />

            <TextView
                android:id="@+id/textTV"
                style="@style/bottom_text_style"
                android:layout_below="@id/imageTV"
                android:text="@string/live" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Hotel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageHotel"
                style="@style/bottom_imageview_style"
                android:background="@mipmap/hotel" />

            <TextView
                android:id="@+id/textHotel"
                style="@style/bottom_text_style"
                android:layout_below="@id/imageHotel"
                android:text="@string/hotelstyle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Server"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageService"
                style="@style/bottom_imageview_style"
                android:background="@mipmap/server" />

            <TextView
                android:id="@+id/textService"
                style="@style/bottom_text_style"
                android:layout_below="@id/imageService"
                android:text="@string/server" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Food"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageFood"
                style="@style/bottom_imageview_style"
                android:background="@mipmap/food" />

            <TextView
                android:id="@+id/textFood"
                style="@style/bottom_text_style"
                android:layout_below="@id/imageFood"
                android:text="@string/food" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/linearLayout"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/hotel_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/hotel_introduction"
                    style="@style/main_item_style"
                    android:focusable="true"
                    android:text="@string/hotel_introduction" />

                <TextView
                    android:id="@+id/brand_history"
                    style="@style/main_item_style"
                    android:layout_below="@id/hotel_introduction"
                    android:focusable="true"
                    android:text="@string/brand_history" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/brand_history"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/arrows" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/server_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/room_introduction"
                    style="@style/main_item_style"
                    android:text="@string/room_introduction" />

                <TextView
                    android:id="@+id/facility_introduction"
                    style="@style/main_item_style"
                    android:layout_below="@id/room_introduction"
                    android:text="@string/facility_introduction" />

                <TextView
                    android:id="@+id/business_server"
                    style="@style/main_item_style"
                    android:layout_below="@id/facility_introduction"
                    android:text="@string/business_service" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/business_server"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/arrows" />
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/food_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/hotel_food"
                    style="@style/main_item_style"
                    android:text="@string/hotel_food" />

                <TextView
                    android:id="@+id/local_features"
                    style="@style/main_item_style"
                    android:layout_below="@id/hotel_food"
                    android:text="@string/local_features" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/local_features"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/arrows" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="match_parent" />
    </LinearLayout>


</RelativeLayout>