<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="254dp"
    android:background="@mipmap/live_play_channel_list_bg"
    android:padding="36dp">
    <TextView
        android:id="@+id/exit_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/exit_words"
        android:textSize="@dimen/S32"
        android:textColor="@color/white_1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white_1"
            android:textSize="@dimen/S28"/>
        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white_1"
            android:textSize="@dimen/S28"
            />

    </LinearLayout>

</RelativeLayout>
