<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/system_set"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_40"
    android:orientation="vertical"
    android:padding="40dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/room_number"
            style="@style/system_set_style"
            android:layout_height="wrap_content"
            android:text="@string/room_number" />

        <EditText
            android:id="@+id/edit_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/room_number"
            android:singleLine="true"
            android:text="666"
            android:textSize="30sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/server_ip"
            style="@style/system_set_style"
            android:layout_height="wrap_content"
            android:text="@string/server_ip" />

        <EditText
            android:id="@+id/edit_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/server_ip"
            android:singleLine="true"
            android:text="192.168.254.84"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/local_ip"
            style="@style/system_set_style"
            android:layout_height="wrap_content"
            android:text="@string/local_ip" />

        <TextView
            android:id="@+id/text_local_ip"
            style="@style/system_set_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/local_ip" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Version"
            style="@style/system_set_style"
            android:layout_height="wrap_content"
            android:text="@string/Version" />

        <TextView
            android:id="@+id/text_version"
            style="@style/system_set_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Version" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1.0"
            android:background="@drawable/main_item_selector"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/white_1"
            android:textSize="@dimen/S28" />

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1.0"
            android:background="@drawable/main_item_selector"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/ok"
            android:textColor="@color/white_1"
            android:textSize="@dimen/S28" />
    </LinearLayout>
</LinearLayout>