<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:scaleType="fitXY">

    <ImageView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/welcome_splash_bg"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/main_time"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/S24"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_50">

        <LinearLayout
            android:layout_width="600dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hotel"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/hotel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/S36"/>

            <TextView
                android:id="@+id/live"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/my_live"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/S36"/>

            <TextView
                android:id="@+id/setting"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/my_setting"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/S36"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>